# myDSCookieCutter

./: .gitignore  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: Pipfile  pyproject.toml
{{cookiecutter.project_name}}/eda/: 0001_eda.R
{{cookiecutter.project_name}}/hooks/: post_gen_project.py
{{cookiecutter.project_name}}/src/: 010_data_load_and_feature_engineering.py  020_train_model.py  030_check_prediction_performance.py  100_make_prediction.py  data_loader.py  data_preparation.py  decompose_data.py  embed_str.py  get_model_inspection_info.py  get_model_performance.py  get_prediction.py  helper__make_submit_file.py  ml_pipeline.py  parameters.py  post_proc.py  train_model.py  transform_data.py  validate_post_proc.py
{{cookiecutter.project_name}}/src/config/: main.yaml
{{cookiecutter.project_name}}/src/config/train_params/: train_params.yaml
