[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.author_name}}"]

[tool.poetry.dependencies]
python = "^3.8.2"
numpy = "^1.19.5"
pandas = "^1.2.1"
catboost = "^0.24.4"
sklearn = "^0.0"
mlflow = "^1.13.1"
seaborn = "^0.11.1"
matplotlib = "^3.3.4"
psutil = "^5.8.0"
ipykernel = "^5.4.3"
pyarrow = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
